--- a/Blog.html
+++ b/Blog.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: "Home"
+title: "Blog"
 ---
 
 {% if site.show_excerpts %}
-  {% include home.html %}
+  {% include Blog.html %}
 {% else %}
-  {% include archive.html title="Posts" %}
+  {% include archive.html title="Blogs" %}
 {% endif %}
