--- a/Blog.html
+++ b/Blog.html
@@ -4,7 +4,7 @@ title: "Blog"
 ---
 
 {% if site.show_excerpts %}
-  {% include Blog.html %}
+  {% include index.md %}
 {% else %}
-  {% include archive.html title="Blogs" %}
+  {% include archive.html title="Posts" %}
 {% endif %}
